--- a/css/styles.css
+++ b/css/styles.css
@@ -142,15 +142,25 @@ span {
   width: 110px;
 }
 
+
+
 /*====END HEADER====*/
 
 /*====section HERO====*/
 
 .section-hero {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/img_section_hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #2f303a;
   height: 600px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
 h1 {
   font-family: var(--main-font);
   font-weight: 900;
