--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,8 @@ img {
 }
 
 .section {
-  padding-top: 94px;
   padding-bottom: 94px;
+  padding-top: 94px;
 }
 
 /*====COMPONENTS====*/
@@ -110,16 +110,12 @@ span {
 }
 
 .mail {
-  margin-left: 371px;
+  margin-right: 30px;
   width: 135px;
 }
 
 .navigation-list-link:hover,
-.navigation-list-link:focus,
-.mail:hover,
-.mail:focus,
-.phone-number:hover,
-.phone-number:focus {
+.navigation-list-link:focus {
   color: var(--main-color);
 }
 
@@ -138,14 +134,29 @@ span {
 
 .phone-number {
   font-style: normal;
-  margin-left: 50px;
   width: 110px;
 }
 
 .mail-number-list {
   display: flex;
   align-items: center;
+  align-content: center;
+  margin-left: 345px;
 }
+
+.envelope-icon,
+.smartphone-icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.mail:hover,
+.mail:focus,
+.phone-number:hover,
+.phone-number:focus {
+  color: var(--main-color);
+}
+
 /*====END HEADER====*/
 
 /*====section HERO====*/
@@ -157,10 +168,7 @@ span {
     ),
     url(../images/img_section_hero.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #2f303a;
   height: 600px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 h1 {
@@ -230,6 +238,8 @@ h1 {
   background-color: #f5f4fa;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
+  border-radius: 4px;
 }
 
 .lorem-ipsum-icon {
@@ -319,6 +329,9 @@ h1 {
 
 .our-team-item {
   background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .our-team-name {
   font-family: var(--main-font);
@@ -388,6 +401,17 @@ h1 {
 
 /*====section our clients====*/
 
+.our-clients-title {
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 48px;
+}
 .our-clients-list {
   display: flex;
   align-items: center;
@@ -400,6 +424,7 @@ h1 {
   border: 1px solid #afb1b8;
   align-items: center;
   justify-content: center;
+  fill: #afb1b8;
 }
 .our-clients-item:not(:last-child) {
   margin-right: 30px;
@@ -408,7 +433,13 @@ h1 {
   display: flex;
   width: 106px;
   height: 60px;
-  fill: #afb1b8;
+}
+
+.our-clients-item:hover,
+.our-clients-item:focus {
+  fill: #2196f3;
+  border: 1px solid #2196f3;
+  cursor: pointer;
 }
 
 /*====footer====*/
@@ -507,7 +538,7 @@ h1 {
 .footer-social-icon:focus {
   fill: #ffffff;
   background-color: var(--main-color);
-  cursor: url("../images/finger3.svg");
+  cursor: pointer;
 }
 
 .footer-social-icon {
@@ -546,6 +577,8 @@ h1 {
   color: #ffffff;
   background-color: var(--main-color);
   cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
@@ -586,5 +619,11 @@ h1 {
 .box-title-type {
   padding-right: 24px;
   padding-left: 24px;
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 /*====END PORTFOLIO BOOKMARK====*/
